--- a/app/medo.css
+++ b/app/medo.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width:100%
+    width:100%;
+   margin-top: 50px;
 
 }
